--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Wait for it...wait for iiiiitt..<h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+    <style>
+        ul {
+            list-style: none;
+        }
+        
+        ul li {
+            margin-bottom: 20px;
+        }
+    </style>
+    <script src="assets/js/app.bundle.js"></script>
+</body>
+
+</html>
