--- a/index.html
+++ b/index.html
@@ -18,4 +18,9 @@
     <script src="assets/js/app.bundle.js"></script>
 </body>
 
+<footer>
+    <p> Source: ProQuest Historical Newspapers: The New York Times with Index </p>
+    <p> His First Year is an art project and commentary on our world. </p>
+    </footer>
+    
 </html>
