update footer content

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </style>
     <div id='container'></div>
     <footer>
-        <p> Source: ProQuest Historical Newspapers: The New York Times with Index </p>
-        <p> His First Year is an art project and commentary on our world. </p>
+        <p> Source: ProQuest Historical Newspapers: The New York Times with Index. His First Year is an art project and commentary
+            on our world.</p>
     </footer>
     <script src="assets/js/app.bundle.js"></script>
 </body>
