--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>His First Year</title>
-    <script type="text/javascript" src="http://platform-api.sharethis.com/js/sharethis.js#property=589be4ef62d1930011a9881b&product=sticky-share-buttons"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -62,6 +61,7 @@
             on our world.</p>
     </footer>
     <script src="assets/js/app.bundle.js"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589beb48bf827449"></script>
 </body>
 
 </html>
