--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         footer {
             position: fixed;
-            bottom: 0;
+            bottom: 45px;
             font-size: 0.75em;
             width: 100%;
             text-align: center;
@@ -60,8 +60,8 @@
         <p> Source: ProQuest Historical Newspapers: The New York Times with Index. His First Year is an art project and commentary
             on our world.</p>
     </footer>
-    <script src="assets/js/app.bundle.js"></script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589beb48bf827449"></script>
+    <script src="assets/js/app.bundle.js"></script>
 </body>
 
 </html>
