trying to add a new headline button

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             margin-bottom: 20px;
         }
     </style>
+    
+    <form action="http://hisfirstyear.org">
+        <input type="submit" value="new headline" />
+        
     <div id='container'></div>
     <footer>
         <p> Source: ProQuest Historical Newspapers: The New York Times with Index. His First Year is an art project and commentary
